# blood-donation-system-backend

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  build.rs  clorinde.toml  compose.build.yaml  compose.yaml  data.sql  package.json  schema.sql
.docker/: compose.build.yaml  compose.yaml
.sqlx/: query-0977a4a721e562d3ecdc66e483a524af561b704a59f388d72c4de07f25a98dc8.json  query-0cded1284e3de8a140439dda59a70deb6dd71c2aa230ecb8044629fd7f1cf8ed.json  query-10fab91cad3043caa9e1d6825b154e1977ec9962edcfe403aaf6a42ca24bee49.json  query-118caba8a1ae454bca1f3035fa43ad8aad99c2d5a10f38ce97178c3af8ae3d1a.json  query-12a73e213d3530f227c6a17989116f6d00f2a7564566da0f5b02ac81e186f131.json  query-1459e2c0ed27010df69e62b1c6083af26c304b2980fcbcb1162ec9c0905d62b9.json  query-187bc1cdacfe79b55a356ffe123c9190c7a059d362f78d17a6615060a921eaf5.json  query-1e637dd7aa7e6936e6ce167432633730a143ddd7073aeccbc963f686217db099.json  query-234d9e24438bfafeb7f87473b1fb6c97d78e581ebab52ce79703c1d95dc286ef.json  query-24cd1d37f09fb67f526b16534364ace4c56de11436661d26c081a85633b0fe9b.json  query-2737332cfaea2082f14dcb96ab7093d45e11c8fc0530c3345d6328be4ee3c254.json  query-29fc7de7dc99154a48bffda7ecf6d0839ae12084bb686bf5aa458e88e5e86996.json  query-36086155d4c4c854789b1f15dd6b1205fadb33e67247e813a7f9e90fbdd8c0d7.json  query-3a621a6d9e0e030dec44cef36039366f645ba855eeb07115bbaf5a03c05864ec.json  query-46fce523159a3cecad6f20b352929cc55c243bc586619e961df587070c97ace2.json  query-487da09555d83dec27dc43d10ce45de53b5aa87be23fa69430a71ccb2664904c.json  query-49b705a23073153ec10345cb6bd190880d4bba1eddfe97d98a78aadc672f5d42.json  query-55abd0cc5683cd4d3cedc895fe58cb2dbe384ecd17fa656a4d5614f38a6fc2c3.json  query-572a1eb178a8992c3fd6a1a4af0a3e7c1e5eb28107878ce9693db85db929a10f.json  query-5b773aed88c19abb42ae5728b61e3afca2e0cbdfb9ca043e40de205739d0683e.json  query-5d5bde7f07a571ae275d63f6ed81a675386d82c0f53ccff0fe569f66f7788065.json  query-5f29f004dbe748d2fda50576d3cf0b1dd9c77d909a65c25629c932a2ab81d42f.json  query-626409a19a6303ee62630ed6e88e1ee16e6cf1980b9837e6aaabf2af55c34fea.json  query-63514980bcf80031bbfd4a26dcb8543b43cd65a46852ad4fe78196eaba3d4663.json  query-6d66b3824b2aec4512bf0fe9fdb8b9dc937735accab92640d00467390b589e32.json  query-70279d405891e4d870cc8c376ef1f75af0a24da3813e1d1122789231fdd3d9e7.json  query-75297b62f03cd2248ea734dd4f34d576411ecabd8dbcddb948d13e745d85b87e.json  query-7ea1028085d4956d8e443bc070c5e42259aa46f47a9291b20b4a64f629389ac9.json  query-7eac791fbd43b9b17b7168421169edf3a962db976352d7435c27cc90fe862903.json  query-81e8e7527e78de2a2ab78c763f5a93627de9f5e2409d312e5e63acc46781b6b7.json  (+18 more)
backend/: Cargo.toml  Dockerfile  clorinde.toml  (+3 more)
(+367 files in other folders)
