[package]
name = "blood-donation-system-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
config = { version = "0.15.11", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "chrono", "env-filter"] }
utoipa = { git = "https://github.com/juhaku/utoipa.git", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa.git", features = ["axum"]  }
uuid = { version = "1.17.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
axum-test = "17.3.0"
